# ortho-remote-mac

./: .envrc  .gitignore  .isort.cfg  .pre-commit-config.yaml  AGENTS.md  README.md  app.py  pyproject.toml  ruff.toml  soundsource_volume.py
.github/workflows/: cicd-on-pr.yml  job-pre-commit.yml  job-prek.yml  pre-commit.yml
rust/ortho_remote_rs/: Cargo.toml  pyproject.toml
rust/ortho_remote_rs/src/: lib.rs
src/ortho_remote/: __init__.py  cli.py
src/ortho_remote/backends/: __init__.py  soundsource.py  system.py
