[project]
name = "ortho-remote-mac"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11.4"
dependencies = [
    "mido>=1.3.0",
    "python-rtmidi>=1.5.5",
    "osascript>=2020.12.3",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.3.3",
]

[tool.uv]
package = true
