[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ortho-remote-mac"
version = "0.1.0"
description = "Control your Mac volume and media playback with an Ortho Remote"
readme = "README.md"
requires-python = ">=3.11.4"
dependencies = [
    "mido>=1.3.0",
    "python-rtmidi>=1.5.5",
    "osascript>=2020.12.3",
    "pyobjc-framework-Quartz>=10.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "prek>=0.3.1",
    "ty>=0.0.15",
]

[project.scripts]
ortho-remote = "ortho_remote.cli:main"

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
